--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "scam-score",
-  "version": "0.0.1",
+  "version": "0.0.3",
+  "scripts": {
+    "start": "node src/server.js"
+  },
   "dependencies": {
     "@kelchy/common": "^1.0.1",
     "@kelchy/http-client": "^0.1.7",
-    "@kelchy/http-server": "^0.1.3",
+    "@kelchy/http-server": "^0.2.2",
     "@waylaidwanderer/chatgpt-api": "^1.20.9",
     "perplexityai": "^1.0.1"
   },
