--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "scam-score",
-  "version": "0.0.3",
+  "version": "0.1.1",
   "scripts": {
     "start": "node src/server.js"
   },
@@ -9,7 +9,7 @@
     "@kelchy/http-client": "^0.1.7",
     "@kelchy/http-server": "^0.2.2",
     "@waylaidwanderer/chatgpt-api": "^1.20.9",
-    "perplexityai": "^1.0.1"
+    "chatgpt-official": "^1.1.5"
   },
   "type": "module"
 }
